--- a/src/main/resources/templates/includes/headers/header-m.html
+++ b/src/main/resources/templates/includes/headers/header-m.html
@@ -9,6 +9,22 @@
 <link rel="stylesheet" href="../../../static/css/common/common.css"/>
 <link rel="stylesheet" href="../../../static/css/common/util.css"/>
 <link rel="stylesheet" href="../../../static/css/components/headers/header-m.css" />
+<!-- favicon -->
+<link rel="shortcut icon" type="image/x-icon" href="../../static/images/favicon/favicon.ico">
+<link rel="apple-touch-icon" sizes="57x57" href="../../static/images/favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="../../static/images/favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="../../static/images/favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="../../static/images/favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="../../static/images/favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="../../static/images/favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="../../static/images/favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="../../static/images/favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="../../static/images/favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="../../static/images/favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../../static/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="../../static/images/favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../../static/images/favicon/favicon-16x16.png">
+<link rel="manifest" href="../../static/images/favicon/manifest.json">
 <title>Main header</title>
 </head>
 <body>
@@ -17,13 +33,12 @@
     <div class="header-container type1">
         <div class="header-wrap">
             <div class="logo-container">
-                <a class="addessPin-container" href="javascript:void(0);">
+                <div class="addessPin-container">
                     <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12 2C8.13 2 5 5.13 5 9C5 14.25 12 22 12 22C12 22 19 14.25 19 9C19 5.13 15.87 2 12 2Z" fill="currentColor" />
                         <circle cx="12" cy="9" r="3" fill="white" />
                     </svg>
-                    <p class="txt-left">강남구</p>
-                </a>
+                </div>
             </div>
             <div class="service-container">
                 <a class="notice-container" href="javascript:void(0);">
