--- a/src/main/resources/templates/login/login_mobile_check.html
+++ b/src/main/resources/templates/login/login_mobile_check.html
@@ -231,7 +231,7 @@
                     <div class="LoginFormAndSocialButtons-module_content__5843f">
                         <div class="LoginFormAndSocialButtons-module_socialContainer__a4f39">
                             <div class="LoginFormAndSocialButtons-module_fullWidthButtonList__2755b">
-                                <button aria-label="카카오로 시작하기" class="Button-module_button__d78c2 Button-module_xl__6be7d Button-module_block__d6eff LoginFormAndSocialButtons-module_fullWidthButton__92ef8" type="button">
+                                <button id="kakao-login" aria-label="카카오로 시작하기" class="Button-module_button__d78c2 Button-module_xl__6be7d Button-module_block__d6eff LoginFormAndSocialButtons-module_fullWidthButton__92ef8 " type="button">
                                     <span>
                                         <span>
                                             <div class="LoginFormAndSocialButtons-module_buttonContents__68303">
